--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,14 @@
 
 	<groupId>org.wltea.analyzer</groupId>
 	<artifactId>ikanalyzer</artifactId>
-	<version>5.0.2-SNAPSHOT</version>
+	<version>4.4.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>IKAnalyzer</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
+        <solr.version>4.4.0</solr.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -17,18 +18,19 @@
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
-			<version>4.3.0</version>
+			<version>${solr.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-queryparser</artifactId>
-			<version>4.3.0</version>
+			<version>${solr.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-analyzers-common</artifactId>
-			<version>4.3.0</version>
+			<version>${solr.version}</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
