--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.wltea.analyzer</groupId>
-	<artifactId>ikanalyzer</artifactId>
+	<artifactId>IKAnalyzer</artifactId>
 	<version>4.4.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
